# CloudVault

./: .env.example  .gitignore  README.md  manage.py  pyproject.toml  requirements.txt  schema.yaml
app/: models.py  serializers.py  tests.py  urls.py  views.py  viewset.py
app/static/app/: dashboard.css  dashboard.js
cloudvault/: asgi.py  settings.py  urls.py  wsgi.py
templates/: index.html
